# NREL-PSM3-2-EPW

./: .env.example  .gitignore  CHANGELOG.md  Ithaca_2019.epw  README.md  assets.py  debug_api_key.py  download_epw.py  get_key_hash.py  pyproject.toml  requirements.txt  run_streamlit.bat  run_test.py  screenshot_fixed.py  streamlit_app.py  test_diff.py  test_frontend.py  test_frontend_toast.py
.Jules/: palette.md
.github/workflows/: build-test.yml  codeql-analysis.yml  release.yml
.jules/: bolt.md  palette.md
app/: streamlit_app.py
nlr_psm3_2_epw/: assets.py  constants.py
nrel_psm3_2_epw/: assets.py  constants.py  epw.py
tests/: test_assets_unit.py  test_download.py  test_epw.py
