[project]
name = "nrel-psm3-2-epw"
version = "0.1.0"
description = "A script that writes out epw files from NREL Physical Solar Model (PSM) v3.2.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click==8.1.8",
  "numpy==2.0.2",
  "pandas==2.2.3",
  "requests==2.32.4",
  "streamlit==1.42.2",
]

[project.optional-dependencies]
dev = [
  "flake8==7.0.0",
  "pytest==9.0.2",
  "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=nrel_psm3_2_epw --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["nrel_psm3_2_epw"]

[tool.flake8]
extend-exclude = [
  ".venv",
  "venv",
  "env",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
