[project]
name = "nrel-psm3-2-epw"
version = "0.4.0"
description = "A script that writes out epw files from NREL Physical Solar Model (PSM) v3.2.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click==8.1.8",
  "folium>=0.20.0",
  "numpy==2.0.2",
  "pandas==2.2.3",
  "requests==2.32.4",
  "streamlit==1.54.0",
  "streamlit-folium>=0.26.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==5.0.0",
  "ruff>=0.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=nrel_psm3_2_epw --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["nrel_psm3_2_epw"]

[tool.ruff]
exclude = [".venv", "venv", "env"]
line-length = 120

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nrel_psm3_2_epw*"]
exclude = ["app*", "tests*"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.7.2",
    "python-semantic-release>=9.21.0",
    "ruff>=0.14.13",
]
[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = "pip install build && python -m build"

[tool.semantic_release.branches.main]
match = "(main|master)"
